# ChangeLog for dev-perl/Net-SMTP-TLS-ButMaintained
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SMTP-TLS-ButMaintained/ChangeLog,v 1.2 2012/06/23 07:46:48 tove Exp $

  23 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
  Add remote-id info for cpan

*Net-SMTP-TLS-ButMaintained-0.190.0 (17 Jun 2012)

  17 Jun 2012; Torsten Veller <tove@gentoo.org>
  +Net-SMTP-TLS-ButMaintained-0.190.0.ebuild, +metadata.xml:
  Initial commit for www-apps/otrs (#418165)
