@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/Net-SMTP-TLS-ButMaintained
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SMTP-TLS-ButMaintained/ChangeLog,v 1.2 2012/06/23 07:46:48 tove Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Net-SMTP-TLS-ButMaintained/ChangeLog,v 1.3 2012/07/03 18:20:01 tove Exp $
+
+*Net-SMTP-TLS-ButMaintained-0.200.0 (03 Jul 2012)
+
+  03 Jul 2012; Torsten Veller <tove@gentoo.org>
+  +Net-SMTP-TLS-ButMaintained-0.200.0.ebuild:
+  Version bump
 
   23 Jun 2012; Torsten Veller <tove@gentoo.org> metadata.xml:
   Add remote-id info for cpan
